--- a/Concert.html
+++ b/Concert.html
@@ -1,225 +1,321 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Concerts - Kulunu Ticketing</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Concerts - Kulunu Ticketing</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-  <style>
-    /* ===== BASE ===== */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f4f7fb;
-      color: #0b2030;
-    }
+<style>
+* { box-sizing: border-box; margin: 0; padding: 0; }
 
-    /* ===== PAGE SYSTEM ===== */
-    .page-section {
-      display: none;
-    }
-    .active-section {
-      display: block;
-    }
+body {
+  font-family: 'Segoe UI', sans-serif;
+  background: #f4f7fb;
+  color: #0b2030;
+}
 
-    /* ===== HEADER ===== */
-    header {
-      padding: 16px 5%;
-      background: #fff;
-      display: flex;
-      align-items: center;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-  
+/* PAGE SYSTEM */
+.page-section { display: none; }
+.active-section { display: block; }
 
-    .bi-arrow-left-circle {
-      font-size: 26px;
-      color: #0c7cff;
-      cursor: pointer;
-      padding-right: 20px;
-    }
+/* HEADER */
+header {
+  padding: 16px 5%;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
 
-    /* ===== CONCERT LIST ===== */
-    .featured {
-      max-width: 1200px;
-      margin: 20px auto;
-      padding: 0 20px;
-    }
+.bi-arrow-left-circle {
+  font-size: 26px;
+  color: #0c7cff;
+  cursor: pointer;
+}
 
-    .event-grid {
-      display: grid;
-      gap: 32px;
-    }
+/* EVENT GRID */
+.featured {
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 0 20px;
+}
 
-    @media (min-width: 768px) {
-      .event-grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
+.event-grid {
+  display: grid;
+  gap: 32px;
+}
 
-    .event-card {
-      background: #fff;
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-    }
+@media (min-width: 768px) {
+  .event-grid { grid-template-columns: repeat(2, 1fr); }
+}
 
-    .event-card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
+.event-card {
+  background: #fff;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+}
 
-    .event-card h3 {
-      margin: 16px;
-      font-size: 18px;
-    }
+.event-card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
 
-    .event-card p {
-      margin: 0 16px 16px;
-      font-size: 14px;
-      color: #555;
-    }
+.event-card h3 {
+  margin: 16px;
+}
 
-    .view-btn {
-      width: 100px;
-      margin: 0 16px 16px;
-      padding: 12px;
-      border: none;
-      border-radius: 32px;
-      background: #0CA6EF;
-      color: #fff;
-      font-weight: 700;
-      cursor: pointer;
-    }
+.event-card p {
+  margin: 0 16px 16px;
+  color: #555;
+  font-size: 14px;
+}
 
-    /* ===== DETAILS PAGE ===== */
-    .details-header {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
+.view-btn {
+  margin: 0 16px 16px;
+  padding: 12px 20px;
+  border-radius: 32px;
+  border: none;
+  background: #0CA6EF;
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+}
 
-    .ticket-details {
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-    }
+/* DETAILS PAGE */
+.ticket-details {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+}
 
-    .details-img {
-      width: 100%;
-      border-radius: 16px;
-      margin-bottom: 20px;
-    }
+.details-img {
+  width: 100%;
+  border-radius: 16px;
+  margin-bottom: 20px;
+}
 
-    .primary-btn {
-      width: 100%;
-      padding: 14px;
-      background: #0CA6EF;
-      color: #fff;
-      border: none;
-      border-radius: 14px;
-      font-weight: 700;
-      cursor: pointer;
-      margin-top: 24px;
-    }
-  </style>
+.primary-btn {
+  width: 100%;
+  padding: 14px;
+  background: #0CA6EF;
+  color: #fff;
+  border: none;
+  border-radius: 14px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+/* MODALS */
+.modal {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 50;
+}
+
+.modal.active { display: flex; }
+
+.modal-content {
+  background: #fff;
+  width: 90%;
+  max-width: 420px;
+  border-radius: 16px;
+  padding: 20px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.modal-header button {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.form-group {
+  margin-bottom: 16px;
+}
+
+label {
+  font-weight: 600;
+  display: block;
+  margin-bottom: 6px;
+}
+
+select, input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+}
+
+.payment-option {
+  padding: 14px;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 600;
+}
+
+.payment-option:hover {
+  border-color: #0CA6EF;
+  color: #0CA6EF;
+}
+</style>
 </head>
 
 <body>
 
-<!-- ================= CONCERT LIST PAGE ================= -->
+<!-- CONCERT PAGE -->
 <div id="concertPage" class="page-section active-section">
+<header>
+  <a href="Ticket.html"><i class="bi bi-arrow-left-circle"></i></a>
+  <h2>Concerts</h2>
+</header>
 
-  <header>
-    <a href="Ticket.html"><i class="bi bi-arrow-left-circle"></i></a>
-    <h2>Concerts</h2>
-  </header>
-
-  <section class="featured">
-
-    <div class="event-grid">
-
-      <div class="event-card">
-        <img src="assets/img/trend4.jpg">
-        <h3>THE CAVEMEN</h3>
-        <p>Explore the cave with The Cavemen and Staycavy.</p>
-        <button class="view-btn"
-          onclick="openTicketDetails(
-            'THE CAVEMEN',
-            'Explore the cave with The Cavemen and Staycavy.',
-            'assets/img/trend4.jpg'
-          )">View</button>
-      </div>
-
-      <div class="event-card">
-        <img src="assets/img/trend3.jpg">
-        <h3>ABUJA TECH CONVERGE</h3>
-        <p>Innovation meets opportunity.</p>
-        <button class="view-btn"
-          onclick="openTicketDetails(
-            'ABUJA TECH CONVERGE',
-            'Innovation meets opportunity.',
-            'assets/img/trend3.jpg'
-          )">View</button>
-      </div>
+<section class="featured">
+<div class="event-grid">
 
 <div class="event-card">
-        <img src="assets/img/trend3.jpg">
-        <h3>ABUJA TECH CONVERGE</h3>
-        <p>Innovation meets opportunity.</p>
-        <button class="view-btn"
-          onclick="openTicketDetails(
-            'ABUJA TECH CONVERGE',
-            'Innovation meets opportunity.',
-            'assets/img/trend3.jpg'
-          )">View</button>
-      </div>
-
-
-    </div>
-  </section>
-
+<img src="assets/img/trend4.jpg">
+<h3>THE CAVEMEN</h3>
+<p>Explore the cave with The Cavemen and Staycavy.</p>
+<button class="view-btn"
+onclick="openTicketDetails('THE CAVEMEN','Explore the cave with The Cavemen and Staycavy.','assets/img/trend4.jpg')">
+View
+</button>
 </div>
 
-<!-- ================= DETAILS PAGE ================= -->
+<div class="event-card">
+<img src="assets/img/trend5.jpg">
+<h3>THE CAVEMEN</h3>
+<p>Explore the cave with The Cavemen and Staycavy.</p>
+<button class="view-btn"
+onclick="openTicketDetails('THE CAVEMEN','Explore the cave with The Cavemen and Staycavy.','assets/img/trend4.jpg')">
+View
+</button>
+</div>
+
+<div class="event-card">
+<img src="assets/img/trend3.jpg">
+<h3>THE CAVEMEN</h3>
+<p>Explore the cave with The Cavemen and Staycavy.</p>
+<button class="view-btn"
+onclick="openTicketDetails('THE CAVEMEN','Explore the cave with The Cavemen and Staycavy.','assets/img/trend4.jpg')">
+View
+</button>
+</div>
+
+</div>
+</section>
+</div>
+
+<!-- DETAILS PAGE -->
 <div id="ticketDetailsPage" class="page-section">
+<header>
+<button onclick="goBack()" style="background:none;border:none">
+<i class="bi bi-arrow-left-circle"></i>
+</button>
+<h3>Event Details</h3>
+</header>
 
-  <header class="details-header">
-    <button onclick="goBack()" style="background:none;border:none;">
-      <i class="bi bi-arrow-left-circle" style="font-size:24px;"></i>
-    </button>
-    <h3>Event Details</h3>
-  </header>
+<div class="ticket-details">
+<img id="detailsImage" class="details-img">
+<h2 id="detailsTitle"></h2>
+<p id="detailsDescription" style="padding-bottom: 5px;"></p>
+<button class="primary-btn" onclick="openTicketModal()">Buy Ticket</button>
+</div>
+</div>
 
-  <div class="ticket-details">
-    <img id="detailsImage" class="details-img">
-    <h2 id="detailsTitle"></h2>
-    <p id="detailsDescription"></p>
-    <button class="primary-btn">Buy Ticket</button>
-  </div>
+<!-- MODAL 1: TICKET -->
+<div id="ticketModal" class="modal">
+<div class="modal-content">
+<div class="modal-header">
+<h3>Select Ticket</h3>
+<button onclick="closeTicketModal()">✕</button>
+</div>
 
+<div class="form-group">
+<label>Ticket Type</label>
+<select>
+<option>Regular</option>
+<option>VIP</option>
+</select>
+</div>
+
+<div class="form-group">
+<label>Quantity</label>
+<input type="number" min="1" value="1">
+</div>
+
+<button class="primary-btn" onclick="openPaymentModal()">Continue</button>
+</div>
+</div>
+
+<!-- MODAL 2: PAYMENT -->
+<div id="paymentModal" class="modal">
+<div class="modal-content">
+<div class="modal-header">
+<h3>Payment Method</h3>
+<button onclick="closePaymentModal()">✕</button>
+</div>
+
+<div class="payment-option">Pay with Card</div>
+<div class="payment-option">Bank Transfer</div>
+<div class="payment-option">USSD</div>
+
+<button class="primary-btn">Pay Now</button>
+</div>
 </div>
 
 <script>
-function openTicketDetails(title, description, image) {
-  document.getElementById('concertPage').classList.remove('active-section');
-  document.getElementById('ticketDetailsPage').classList.add('active-section');
-
-  document.getElementById('detailsTitle').textContent = title;
-  document.getElementById('detailsDescription').textContent = description;
-  document.getElementById('detailsImage').src = image;
+function openTicketDetails(title, desc, img) {
+  concertPage.classList.remove('active-section');
+  ticketDetailsPage.classList.add('active-section');
+  detailsTitle.textContent = title;
+  detailsDescription.textContent = desc;
+  detailsImage.src = img;
 }
 
 function goBack() {
-  document.getElementById('ticketDetailsPage').classList.remove('active-section');
-  document.getElementById('concertPage').classList.add('active-section');
+  ticketDetailsPage.classList.remove('active-section');
+  concertPage.classList.add('active-section');
+}
+
+function openTicketModal() {
+  ticketModal.classList.add('active');
+}
+
+function closeTicketModal() {
+  ticketModal.classList.remove('active');
+}
+
+function openPaymentModal() {
+  closeTicketModal();
+  paymentModal.classList.add('active');
+}
+
+function closePaymentModal() {
+  paymentModal.classList.remove('active');
 }
 </script>
 
