--- a/Concert.html
+++ b/Concert.html
@@ -4,183 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Concerts - Kulunu Ticketing</title>
-
+ <link href="assets/css/concert.css" rel="stylesheet"> 
 <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-
-<style>
-* { box-sizing: border-box; margin: 0; padding: 0; }
-
-body {
-  font-family: 'Segoe UI', sans-serif;
-  background: #f4f7fb;
-  color: #0b2030;
-}
-
-/* PAGE SYSTEM */
-.page-section { display: none; }
-.active-section { display: block; }
-
-/* HEADER */
-header {
-  padding: 16px 5%;
-  background: #fff;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-
-.bi-arrow-left-circle {
-  font-size: 26px;
-  color: #0c7cff;
-  cursor: pointer;
-}
-
-/* EVENT GRID */
-.featured {
-  max-width: 1200px;
-  margin: 20px auto;
-  padding: 0 20px;
-}
-
-.event-grid {
-  display: grid;
-  gap: 32px;
-}
-
-@media (min-width: 768px) {
-  .event-grid { grid-template-columns: repeat(2, 1fr); }
-}
-
-.event-card {
-  background: #fff;
-  border-radius: 16px;
-  overflow: hidden;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-}
-
-.event-card img {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-}
-
-.event-card h3 {
-  margin: 16px;
-}
-
-.event-card p {
-  margin: 0 16px 16px;
-  color: #555;
-  font-size: 14px;
-}
-
-.view-btn {
-  margin: 0 16px 16px;
-  padding: 12px 20px;
-  border-radius: 32px;
-  border: none;
-  background: #0CA6EF;
-  color: #fff;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-/* DETAILS PAGE */
-.ticket-details {
-  max-width: 600px;
-  margin: auto;
-  padding: 20px;
-}
-
-.details-img {
-  width: 100%;
-  border-radius: 16px;
-  margin-bottom: 20px;
-}
-
-.primary-btn {
-  width: 100%;
-  padding: 14px;
-  background: #0CA6EF;
-  color: #fff;
-  border: none;
-  border-radius: 14px;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-/* MODALS */
-.modal {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.5);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  z-index: 50;
-}
-
-.modal.active { display: flex; }
-
-.modal-content {
-  background: #fff;
-  width: 90%;
-  max-width: 420px;
-  border-radius: 16px;
-  padding: 20px;
-}
-
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 16px;
-}
-
-.modal-header button {
-  background: none;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-.form-group {
-  margin-bottom: 16px;
-}
-
-label {
-  font-weight: 600;
-  display: block;
-  margin-bottom: 6px;
-}
-
-select, input {
-  width: 100%;
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-}
-
-.payment-option {
-  padding: 14px;
-  border: 1px solid #ddd;
-  border-radius: 12px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  text-align: center;
-  font-weight: 600;
-}
-
-.payment-option:hover {
-  border-color: #0CA6EF;
-  color: #0CA6EF;
-}
-</style>
 </head>
 
 <body>
